# guardian_config

./: .project  CMakeLists.txt  LICENSE  README.md  guardian.launch  guardian_navigation.launch  package.xml  static_pub.launch
bags/: guardian_save_bag.launch  guardian_save_bag_sensors.launch
control/: guardian_control.launch
decision/: guardian_decision.launch  guardian_decision_planner.launch  pose_goals.yaml  pose_goals_FNR.yaml  pose_goals_LAB_FNR.yaml  pose_goals_aimen_wall_sections.yaml  pose_goals_aimen_wall_sections_bug_point.yaml  pose_goals_crob.yaml  pose_goals_delta_5.yaml  pose_goals_delta_5_wall_sections.yaml  pose_goals_deltamatic.yaml  pose_goals_forum.yaml  pose_goals_hipercentro.yaml  pose_goals_hipercentro_van.yaml  pose_goals_hipercentro_van_close_to_walls.yaml  pose_goals_maker_faire_1.yaml  pose_goals_mostra.yaml  pose_goals_mostra_quinta.yaml  pose_goals_mostra_teste_fusivel.yaml  pose_goals_planner.yaml  pose_goals_valina.yaml  pose_goals_valina_11_offset.yaml  pose_goals_valina_wall_1.yaml  pose_goals_valina_wall_2.yaml  pose_goals_valina_wall_final.yaml  pose_goals_valina_wall_final_test.yaml
hardware/: guardian_driver_all.launch  guardian_driver_arm.launch  guardian_driver_imu.launch  guardian_driver_laser_back.launch  guardian_driver_laser_back_supervisor.launch  guardian_driver_laser_back_urg.launch  guardian_driver_laser_front.launch  guardian_driver_laser_front_04lx.launch  guardian_driver_laser_front_supervisor.launch  guardian_driver_laser_front_tilt.launch  guardian_driver_laser_front_urg.launch  guardian_driver_laser_front_urg_10lx.launch  guardian_driver_lasers.launch  guardian_driver_motors.launch  guardian_driver_motors_odom_tf.launch  guardian_driver_motors_tracks.yaml  guardian_driver_motors_wheels.yaml  guardian_driver_relays.launch  guardian_driver_rpi.launch  guardian_driver_structure_io.launch  guardian_projector_setup.sh  guardian_state_publisher.launch  tilt_laser.yaml
install/: install.bash  install.sh  setup.sh
localization/: guardian_fake_localization.launch  guardian_laser_to_pointcloud.launch  guardian_localization.launch  hector_trajectory_server.launch  ukf_sensor_fusion_odom_imu.launch
motion/: guardian_motion.launch
os/: 49-carlos-hardware.rules  boot.sh  ros.bash
pad/: guardian_pad.launch  guardian_pad_logitech.launch  logitech.yaml  logitech_orig.yaml  ps3.yaml
planning/: guardian_planner_LAB.launch  guardian_planner_delta.launch  guardian_planner_lab.launch
projection/: guardian_projection.bash  guardian_start_projection.bash  guardian_stop_projection.bash
(+247 files in other folders)
