<?xml version="1.0"?>
<package>
	<name>guardian_config</name>
	<version>1.0.0</version>
	<description>The guardian_config package for the CARLoS robot configuration</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

	<buildtool_depend>catkin</buildtool_depend>



	<!-- ################################################################## -->
	<!-- ros run dependencies -->
	<!-- ################################################################## -->

	<run_depend>fake_localization</run_depend>
	<run_depend>hector_mapping</run_depend>
	<run_depend>hector_trajectory_server</run_depend>
	<run_depend>hokuyo_node</run_depend>
	<run_depend>joy</run_depend>
	<run_depend>map-server</run_depend>
	<run_depend>openni2_launch</run_depend>
	<run_depend>ps3joy</run_depend>
	<run_depend>robot_localization</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>rosbag</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>tf2</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>topic_tools</run_depend>
	<run_depend>urg_node</run_depend>



	<!-- ################################################################## -->
	<!-- ros inesc / robotnik run dependencies -->
	<!-- ################################################################## -->

	<run_depend>dynamic_robot_localization</run_depend>			<!-- https://github.com/inesc-tec-robotics/dynamic_robot_localization -->
	<run_depend>layered_astar</run_depend>
	<run_depend>guardian_description</run_depend>				<!-- https://github.com/inesc-tec-robotics/guardian_ros_pkg -->
	<run_depend>guardian_node</run_depend>						<!-- https://github.com/inesc-tec-robotics/guardian_ros_pkg -->
	<run_depend>guardian_pad</run_depend>						<!-- https://github.com/inesc-tec-robotics/guardian_ros_pkg -->
	<run_depend>my_planner</run_depend>
	<run_depend>oea_controller</run_depend>
	<run_depend>pose_to_tf_publisher_node</run_depend>			<!-- https://github.com/inesc-tec-robotics/pose_to_tf_publisher -->
	<run_depend>rly_08</run_depend>								<!-- https://github.com/RobotnikAutomation/rly_08 -->
	<run_depend>robotnik_tilt_laser</run_depend>				<!-- https://github.com/inesc-tec-robotics/robotnik_tilt_laser -->
	<run_depend>srau_decision</run_depend>
 	<run_depend>um7</run_depend>								<!-- https://github.com/inesc-tec-robotics/um7 -->

</package>